--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Abdulnur930.github.io/Netflix-Clone",
+  "homepage": "https://Fethulmubin.github.io/netflix-clone-last",
   "name": "netflix-clone",
   "version": "0.1.0",
   "private": true,
